[NAE-2085] Refactor User
- change user structure